# AI-Jobs-Notebook

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml
data/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
notebooks/: 01-exploration.ipynb
notebooks/.ipynb_checkpoints/: 01-exploration-checkpoint.ipynb
