[project]
name = "ai-job"
version = "0.1.0"
description = "AI Jobs EDA + Regression Modeling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.4",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
